--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
         </table>
         <form name="form1" class="form-control">    
             <label class="label" for="ediDate">Date :</label>
-            <input type="text" name="ediDate" class="ID_edi" placeholder="jj/mm/aaaa" size="5"> <br><br>
+            <input type="date" name="ediDate" class="ID_edi" size="5"> <br><br>
             <label class="label" for="ediPrix">Prix :</label>
             <input type="text" name="ediPrix" class="ID_edi" size="5"> <br><br>
             <input type="button" id="but_ajouter" name="but_Ajouter" value="Ajouter" onclick="ajouter(this.form);">
