--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
 </head>
 <body  onload="rafraichir()">
     <header>
-        <h1>Coding Bank <span><img src="images/piggy-bank.svg" alt=""></span></h1>
+        <h1><a href="index.html">Coding Bank <span><img src="images/piggy-bank.svg" alt=""></span></a></h1>
         
         <nav>
             <a href="index.html" id="Login">Accueil</a>
