--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
         <script src="index.js"></script>
     </head>
     <body>
+        <div class="main">
         <header>
-            <h1>Coding Bank <span><img src="images/piggy-bank.svg" alt=""></span></h1>
-            
+            <h1><a href="index.html">Coding Bank <span><img src="images/piggy-bank.svg" alt=""></span></a></h1>
             <nav>
-                <a href="#" id="monCompte">My_Account</a>
-                <a href="login.html" id="Login">Login</a>
-               
+                <a href="account.html" id="monCompte">My_Account</a>
+                <a href="admin.html" id="Login">Admin</a>
             </nav>
         </header>
         <div class="container">
             <div class="month">
-                <h2>Mois d'Avril</h2> <br>
-                <p>Alors pour ce mois ci voici l'évolution des soldes : <br><br> </p>
                 <table>
                     <thead>
                         <tr>
@@ -60,5 +57,6 @@
             </div>
         </div>
         <footer>Done by Coding Elites © Copyright 2022</footer>
+    </div>
     </body>
 </html>
