--- a/acceuil.html
+++ b/acceuil.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Coding Bank <span><img src="images/piggy-bank.svg" alt=""></span></a></h1>
+        <h1 style="text-align: center; color: white;">Coding Bank <span><img src="images/piggy-bank.svg" alt=""></span></h1>
     
     </header>
     <div class="form-container">
