tableau de remplissage

--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,57 @@
             <a href="index.html" id="Login">Accueil</a>
         </nav>
     </header>
-    <div class="tableau">
+
+        <table id="tab">
+            <caption>Money</caption>
+            <tr>
+                <th>Identité</th>
+                <th>Poste</th>
+                <th id="id_date">Date</th>
+                <th id="id_prix">Prix</th>
+            </tr>
+            <tr>
+                <td>Roméo KAKPO</td>
+                <td>PDG</td>
+                <td> </td>
+                <td> </td>
+            </tr>
+            <tr>
+                <td>Hermann D'ALMEIDA</td>
+                <td>SG</td>
+                <td> </td>
+                <td> </td>
+            </tr>
+            <tr>
+                <td>Rayane KADRI</td>
+                <td>SGA</td>
+                <td> </td>
+                <td> </td>
+            </tr>
+            <tr>
+                <td>Franck AVODAGBA</td>
+                <td>TG</td>
+                <td> </td>
+                <td> </td>
+            </tr>
+            <tr>
+                <td>Hospice HOUNFODJI</td>
+                <td>TGA</td>
+                <td> </td>
+                <td> </td>
+            </tr>
+        </table>
+
+     <!--   <form name="form1" class="form-control">    
+            <label class="label" for="ediDate">Date :</label>
+            <input type="date" name="ediDate" class="ID_edi" size="5"> <br><br>
+            <label class="label" for="ediPrix">Prix :</label>
+            <input type="text" name="ediPrix" class="ID_edi" size="5"> <br><br>
+            <input type="button" id="but_ajouter" name="but_Ajouter" value="Ajouter" onclick="ajouter(this.form);">
+        </form>
+
+
+   <div class="tableau">
         <table id="tab">
             <caption>PDG : Roméo KAKPO</caption>
             <tr>
@@ -33,7 +83,7 @@
         </form>
     </div>
 
-   <!--   <div class="tableau">
+     <div class="tableau">
         <table class="tab">
             <caption>PDG : Roméo KAKPO</caption>
             <tr>
