--- a/admin.html
+++ b/admin.html
@@ -50,7 +50,7 @@
                 <td> </td>
             </tr>
             <tr>
-                <td>Hospice HOUNFODJI</td>
+                <td>Hospice Ruthus HOUNFODJI</td>
                 <td>TGA</td>
                 <td> </td>
                 <td> </td>
