--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,6 @@
     </header>
 
         <table id="tab">
-            <caption>Money</caption>
             <tr>
                 <th>Identité</th>
                 <th>Poste</th>
@@ -50,12 +49,35 @@
                 <td> </td>
             </tr>
             <tr>
-                <td>Hospice Ruthus HOUNFODJI</td>
+                <td>Hospice HOUNFODJI</td>
                 <td>TGA</td>
                 <td> </td>
                 <td> </td>
             </tr>
         </table>
+
+        <div class="form-containerA">  <!--A pour dire pour la page Admin-->
+            <div class="formulaireA">
+                <h2 style="text-align: center;">Remplissage</h2>
+                    <form action="">
+                        <form method="" action="">
+                            <label for="">Nom d'utilisateur</label>
+                            <select name="membre" id="id_membre">
+                                <option value="Roméo KAKPO">Roméo KAKPO</option>
+                                <option value="Hermann D'ALMEIDA">Hermann D'ALMEIDA</option>
+                                <option value="Rayane KADRI">Rayane KADRI</option>
+                                <option value="Franck AVODAGBA">Franck AVODAGBA</option>
+                                <option value="Hospice HOUNFODJI">Hospice HOUNFODJI</option>
+                            </select>
+                        </form>
+                        <label for="">Prix</label>
+                        <input type="text" name="" id="" placeholder="Entrer le prix" class="input">
+                        <label for="">Date</label>
+                        <input type="date" name="" id=""  class="input">
+                        <button type="submit" class="submit">Soumettre</button>
+                    </form>
+            </div>
+        </div>
 
      <!--   <form name="form1" class="form-control">    
             <label class="label" for="ediDate">Date :</label>
