modif du tableau

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Cotisations Coding Elites</title>
         <link rel="stylesheet" href="index.css">
         <script src="index.js"></script>
+        <script src="admin.js"></script>
     </head>
     <body>
         <div class="main">
@@ -16,7 +17,48 @@
                 <a href="admin.html" id="Login">Admin</a>
             </nav>
         </header>
+
+        <table id="tab">
+            <tr>
+                <th>Identité</th>
+                <th>Poste</th>
+                <th id="id_date">Date</th>
+                <th id="id_prix">Prix</th>
+            </tr>
+            <tr>
+                <td>Roméo KAKPO</td>
+                <td>PDG</td>
+                <td id="1"> </td>
+                <td id="2"> </td>
+            </tr>
+            <tr>
+                <td>Hermann D'ALMEIDA</td>
+                <td>SG</td>
+                <td id="3"> </td>
+                <td id="4"> </td>
+            </tr>
+            <tr>
+                <td>Rayane KADRI</td>
+                <td>SGA</td>
+                <td id="5"> </td>
+                <td id="6"> </td>
+            </tr>
+            <tr>
+                <td>Franck AVODAGBA</td>
+                <td>TG</td>
+                <td id="7"> </td>
+                <td id="8"> </td>
+            </tr>
+            <tr>
+                <td>Hospice HOUNFODJI</td>
+                <td>TGA</td>
+                <td id="9"> </td>
+                <td id="10"> </td>
+            </tr>
+        </table>
+
         <div class="container">
+            <!--
             <div class="month">
                 <table>
                     <thead>
@@ -54,7 +96,7 @@
                 </table>
                 <br><br>
                 <p>Montant total actuel du mois : <span>0 FCFA</span> </p>
-            </div>
+            </div> -->
         </div>
         <footer>Done by Coding Elites © Copyright 2022</footer>
     </div>
