--- a/404.html
+++ b/404.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>404</title>
-        <link rel="stylesheet" type="text/css" href="404.css">
-        <meta charset="utf-8">
 
-    </head>
-    <body>
-        <div id="block">
-            <p id="number">404</p>
-            <p id="page">Page Not Found</p>
-        </div>
-        
+<head>
+    <meta charset="utf-8">
+    <title>404 | Not Found</title>
+    <meta name="viewport" content="width=device-width, initial-scale= 1">
+    <link rel="stylesheet" type="text/css" href="404.css">
+</head>
 
-    </body>
+<body>
+    <div class="block">
+        <p>404</p>
+        <p>Page Not Found</p>
+    </div>
+</body>
+
 </html>
